Tue Jan  7 12:43:06 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/timeout.rb (Timeout#timeout): should not rescue ordinarily
	  raised ExitException, which should not be thrown.

	* lib/timeout.rb (Timeout::ExitException.catch): set @thread only if
	  it ought to be caught.

	* lib/timeout.rb (Timeout#timeout): when a custom exception is given,
	  no instance is needed to be caught, so defer creating new instance
	  until it is raised.  [ruby-core:59511] [Bug #9354]

Tue Jan  7 10:16:02 2014  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master 21e409d / RubyGems 2.2.1.

	  See http://rubygems.rubyforge.org/rubygems-update/History_txt.html
	  for a list of bug fixes.

	* test/rubygems:  ditto.

Tue Jan  7 10:10:46 2014  Eric Wong <e@80x24.org>

	* ext/json/generator/depend: add build dependencies for json extension
	  [Bug #9374] [ruby-core:59609]
	* ext/json/parser/depend: ditto

Tue Jan  7 04:35:46 2014  Aman Gupta <ruby@tmm1.net>

	* array.c (ary_add_hash): Fix consistency issue between Array#uniq and
	  Array#uniq! [Bug #9340] [ruby-core:59457]
	* test/ruby/test_array.rb (class TestArray): regression test for above.

Mon Jan  6 21:28:48 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* .gitignore: ignore *-fake.rb generated even when CROSS_COMPILING = no
	  since r42862.

Sun Jan  5 20:14:14 2014  Benoit Daloze  <eregontp@gmail.com>

	* compar.c (cmp_equal): remove error hiding in Comparable#==.
	  Comparable#== no longer rescues exceptions silently.
	  This was the cause of quite a couple bugs. See #7688. [EXPERIMENTAL]

	* test/ruby/test_comparable.rb: adapt assertion to match new behavior.

	* lib/rdoc/method_attr.rb: fix bugs discovered by this change.

	* test/rdoc/test_rdoc_normal_class.rb: fix bugs in tests.

Sat Jan  4 22:44:00 2014  Charlie Somerville  <charliesome@ruby-lang.org>

	* struct.c (rb_struct_set): return assigned value from setter method
	  rather than struct object. [Bug #9353] [ruby-core:59509]
